@@ -1,3 +1,8 @@
+2005-12-xx:  0.2.6       -- option to hide splashscreen added
+                         -- progress is now displayed in statusbar
+			 -- Changes in the menu: "Settings" menu created to
+			    resemble KDE menus layout.
+
 2005-11-13:  0.2.5       -- splash screen added (made exclusively for
                             QComicBook by Adam Mateja)
                          -- icons for Open Archive/Directory, Settings and
